--- a/src/routes/styles.scss
+++ b/src/routes/styles.scss
@@ -1,12 +1,7 @@
-@use '$lib/styles/_constants' as var;
-
 :root {
-	--primary: #007bd7;
-	--primary-hover: #006ec2;
-	--secondary: #2f2646;
+	--bgr: #604fd8;
 	--main-font: 'Patika', Arial, sans-serif;
 	--font-color-1: #FFFFF;
-	
 }
 
 * {
@@ -21,7 +16,7 @@ body {
 }
 
 body {
-	min-width: 320px;
+	min-width: 280px;
 	font-family: var(--main-font);
 	color: white;
 	font-size: 20px;
@@ -29,7 +24,8 @@ body {
 	font-weight: 400;
 	-webkit-font-smoothing: antialiased;
 	height: 100%;
-	min-height: 100vh;
+	// min-height: 100vh;
+	background-color: var(--bgr);
 }
 
 ul {
@@ -41,33 +37,129 @@ a {
 	color: inherit;
 }
 
+section[data-lang='pt'] {
+	@media screen and (max-width: 720px) {
+		background-image: url(/images/bgr/mobile_pt.jpg);
+		@media screen and (-webkit-min-device-pixel-ratio: 2), (min-device-pixel-ratio: 2) {
+			background-image: url(/images/bgr/mobile_pt@2x.jpg);
+		}
+	}
+
+	@media screen and (min-width: 721px) {
+		background-image: url(/images/bgr/desktop_pt.jpg);
+		@media screen and (-webkit-min-device-pixel-ratio: 2), (min-device-pixel-ratio: 2) {
+			background-image: url(/images/bgr/desktop_pt@2x.jpg);
+		}
+	}
+}
 section {
+	overflow: hidden;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: flex-end;
+	height: 100vh;
+	height: calc(var(--vh, 1vh) * 100);
+	flex-grow: 1;
+	padding-bottom: 60px;
 	margin: 0 auto;
 	width: 100%;
-	max-width: 1920px;
-	padding: 0 128px;
+	background-size: cover;
+	background-position: center bottom;
+	background-repeat: no-repeat;
+	position: relative;
 
-	@media screen and (max-width: var.$media-l) {
-		padding: 0 80px;
+	@media screen and (max-width: 720px) {
+		background-size: 800px auto;
+		background-image: url(/images/bgr/mobile.jpg);
+		@media screen and (-webkit-min-device-pixel-ratio: 2), (min-device-pixel-ratio: 2) {
+			background-image: url(/images/bgr/mobile@2x.jpg);
+		}
+		@media screen and (max-height: 720px) {
+			background-position: center top -200px;
+		}
 	}
 
-	@media screen and (max-width: var.$media-m) {
-		padding: 0 40px;
-	}
-
-	@media screen and (max-width: var.$media-s) {
-		padding: 0 24px;
-	}
-
-	@media screen and (max-width: var.$media-xs) {
-		padding: 0 20px;
-	}
-
-	@media screen and (max-width: var.$media-xxs) {
-		padding: 0 16px;
+	@media screen and (min-width: 721px) {
+		background-size: 1000px auto;
+		background-image: url(/images/bgr/desktop.jpg);
+		@media screen and (-webkit-min-device-pixel-ratio: 2), (min-device-pixel-ratio: 2) {
+			background-image: url(/images/bgr/desktop@2x.jpg);
+		}
+		@media screen and (max-height: 790px) {
+			background-position: center top;
+		}
+		@media screen and (max-height: 600px) {
+			background-size: 800px auto;
+		}
 	}
 }
 
+.illustration {
+	position: absolute;
+	animation: moveUpDownInfinite 5s ease-in-out infinite forwards;
 
+	&-1 {
+		right: calc((90vw - 650px) / 2);
+		top: 10vh;
+		width: 167px;
+		height: 167px;
+		animation-delay: 1s;
+		@media screen and (max-width: 800px) {
+			width: 84px;
+			height: 84px;
+			right: 5vw;
+		}
+	}
+	&-2 {
+		left: 0;
+		height: 224px;
+		width: 140px;
+		top: 45%;
+		@media screen and (max-width: 800px) {
+			height: 112px;
+			width: 70px;
+			top: 15vh;
+		}
+	}
+	&-3 {
+		width: 172px;
+		height: 172px;
+		left: calc((80vw - 650px) / 2);
+		top: 60vh;
+		animation-delay: 0.5s;
+		@media screen and (max-width: 800px) {
+			height: 86px;
+			width: 86px;
+			top: 75vh;
+			left: 5vw;
+		}
+	}
+	&-4 {
+		right: 0;
+		width: 160px;
+		height: 155px;
+		top: 90vh;
+		animation-delay: 1.5s;
+		@media screen and (max-width: 800px) {
+			width: 80px;
+			height: 77px;
+			top: 40vh;
+			right: -30px;
+		}
+	}
+}
 
+@keyframes moveUpDownInfinite {
+	0% {
+		transform: translateY(0);
+	}
+	50% {
+		transform: translateY(-15px);
+	}
+	100% {
+		transform: translateY(0);
+	}
+}
 
+// 604FD8
