--- a/src/routes/styles.scss
+++ b/src/routes/styles.scss
@@ -1,5 +1,6 @@
 :root {
-	--bgr: #604fd8;
+	--bgr-1: #604fd8;
+	--bgr-3-2: #afcfe5;
 	--main-font: 'Patika', Arial, sans-serif;
 	--font-color-1: #FFFFF;
 }
@@ -24,8 +25,6 @@ body {
 	font-weight: 400;
 	-webkit-font-smoothing: antialiased;
 	height: 100%;
-	// min-height: 100vh;
-	background-color: var(--bgr);
 }
 
 ul {
@@ -37,21 +36,6 @@ a {
 	color: inherit;
 }
 
-section[data-lang='pt'] {
-	@media screen and (max-width: 720px) {
-		background-image: url(/images/bgr/mobile_pt.jpg);
-		@media screen and (-webkit-min-device-pixel-ratio: 2), (min-device-pixel-ratio: 2) {
-			background-image: url(/images/bgr/mobile_pt@2x.jpg);
-		}
-	}
-
-	@media screen and (min-width: 721px) {
-		background-image: url(/images/bgr/desktop_pt.jpg);
-		@media screen and (-webkit-min-device-pixel-ratio: 2), (min-device-pixel-ratio: 2) {
-			background-image: url(/images/bgr/desktop_pt@2x.jpg);
-		}
-	}
-}
 section {
 	overflow: hidden;
 	display: flex;
@@ -68,31 +52,6 @@ section {
 	background-position: center bottom;
 	background-repeat: no-repeat;
 	position: relative;
-
-	@media screen and (max-width: 720px) {
-		background-size: 800px auto;
-		background-image: url(/images/bgr/mobile.jpg);
-		@media screen and (-webkit-min-device-pixel-ratio: 2), (min-device-pixel-ratio: 2) {
-			background-image: url(/images/bgr/mobile@2x.jpg);
-		}
-		@media screen and (max-height: 720px) {
-			background-position: center top -200px;
-		}
-	}
-
-	@media screen and (min-width: 721px) {
-		background-size: 1000px auto;
-		background-image: url(/images/bgr/desktop.jpg);
-		@media screen and (-webkit-min-device-pixel-ratio: 2), (min-device-pixel-ratio: 2) {
-			background-image: url(/images/bgr/desktop@2x.jpg);
-		}
-		@media screen and (max-height: 790px) {
-			background-position: center top;
-		}
-		@media screen and (max-height: 600px) {
-			background-size: 800px auto;
-		}
-	}
 }
 
 .illustration {
